# iljjagom

./: .gitignore  README.md
backend/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  deps.py  errors.py  main.py  ratelimit.py  storage.py  util.py
backend/app/ai/: brief.py  chat.py  collab_ctx.py  designer.py  editor.py  gemini.py  imagen.py  quiz.py  rag.py  react.py  routes.py  safety.py  sanitize.py  trace.py  writer.py
backend/app/api/: admin.py  ai.py  auth.py  board.py  books.py  chapters.py  events.py  planning.py  safety.py  teacher.py
backend/app/models/: base.py  schemas.py
backend/app/services/: accounts.py  admin.py  board.py  books.py  chapters.py  collab.py  events.py  learning.py  policy.py  (+6 more)
backend/tests/: conftest.py  test_06_improvements.py  test_07_query_batching.py  test_08_real_quiz.py  test_09_goal_fixes.py  test_admin.py  test_admin_drilldown.py  test_ai_sessions.py  test_auth.py  test_board.py  test_class_settings.py  test_collab.py  test_core_experience.py  test_design_prefetch.py  test_designer.py  test_display_name.py  test_emotion_letters.py  test_gemini_errors.py  test_guided_stall_fallback.py  test_interview_close.py  test_learning_cache.py  test_measurement.py  test_mid_activity.py  test_multi_class.py  test_overseer.py  test_p1_flow.py  test_prefetch.py  test_prompt_snapshot.py  test_quiz_shuffle.py  test_react.py  test_safety.py  test_sanitize.py  test_select_words.py  test_skills.py  test_skills_extra.py  test_sse_error.py  test_store_observability.py  test_teacher_read.py
(+228 files in other folders)
